# osbuilder

./: .gitattributes  .gitignore  CLAUDE.md  README.md  SKILL.md  install.sh  pyproject.toml
.github/workflows/: ci.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
assets/: readme-template.md
assets/ci-workflows/: node.yml.tmpl  python.yml.tmpl  tauri.yml.tmpl
assets/cli-starter/: __main__.py.tmpl  pyproject.snippet.toml
assets/demo/: RECORDING-CHECKLIST.md  osbuilder-demo.cast
assets/dockerfiles/: node-pnpm.Dockerfile.tmpl  python-uv.Dockerfile.tmpl
assets/fastapi-starter/: README.md  main.py  pyproject.snippet.toml
assets/gitignore-templates/: common.gitignore  node.gitignore  python.gitignore
assets/gitleaks/: .gitleaks.toml  .pre-commit-config.yaml
assets/hub-template/: AGENTS.md.tmpl  CLAUDE.md.tmpl  README.md  subtool-CLAUDE.md.tmpl
examples/: README.md
references/: README.md  markers.md  question-bank.md  refuse-list.md  stack-menu.md  version-policy.md
references/roles/: devops.md  (+7 more)
scripts/: bootstrap.ps1  bootstrap.sh  check_skill_md_length.py  check_skill_versions.py  failure_classifier.py  friendly_error.py  gh_handoff.py  gsd_driver.py  intake_handler.py  narration.py  preflight_check.py  production_phase_writer.py  registry_verify.py  runbook_writer.py  scaffold_dispatch.py  stack_researcher.py  state_writer.py  uninstall.py
(+204 files in other folders)
