[project]
name = "osbuilder"
version = "1.0.0"
description = "Claude Code skill that builds full-stack apps from plain-English descriptions."
requires-python = ">=3.10"

[tool.pytest.ini_options]
pythonpath = ["scripts"]
testpaths = ["scripts/tests"]
addopts = "-x --tb=short"

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]
