[project]
name = "osbuilder"
version = "1.0.0"
description = "Claude Code skill that builds full-stack apps from plain-English descriptions."
requires-python = ">=3.10"

[tool.pytest.ini_options]
pythonpath = ["scripts"]
testpaths = ["scripts/tests"]
addopts = "-x --tb=short -m 'not slow'"
markers = [
    "slow: marks tests as slow (skipped by default; opt-in with -m slow)",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]
